<resources>
	<string name="app_name">CarController</string>
	<string name="title_activity_settings">Settings</string>
	<string name="server">Server</string>
	<string name="server_address">Server address</string>
	<string name="menu">Menu</string>
	<string name="connect">Connect</string>
	<string name="disconnect">Disconnect</string>
	<string name="settings">Settings</string>
	<string name="ice_server">ICE Server</string>
	<string name="connection_failed">Connection failed</string>
	<string name="video">Video</string>
	<string name="server_host">Server host</string>
	<string name="webrtc_server_port">WebRTC server port</string>
	<string name="webrtc_server_path">WebRTC server path</string>
	<string name="use_https_for_webrtc_server">Use https for webrtc server</string>
	<string name="car_control_port">Car control port</string>
	<string name="hw_decoder">Hardware video decode acceleration</string>
	<string name="hw_encoder">Hardware video encode acceleration</string>
	<string name="max_motors_speed_percent">Max motors speed (Percent)</string>
	<string name="min_motors_speed_percent">Min motors speed (Percent)</string>
</resources>